--- a/ScriptEngine.csproj
+++ b/ScriptEngine.csproj
@@ -40,13 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Directory\Directory.cs" />
     <Compile Include="File\File.cs" />
     <Compile Include="Script.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Directory\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
